[project]
name = "realtime-conversational-agent-server"
version = "0.1.0"
description = "Example application using the Gemini Live API and ADK."
authors = [
    {name = "Stephen Allen", email = "stephenaallen@google.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "fastapi>=0.116.1",
    "google-genai>=1.36.0",
    "google-adk>=1.14.1"
]